--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ table {
 	margin: auto;
 }	
 .grn {
-background-color: green !imoprtant;
+background-color: green !important;
 }
 .ylw, .ylwUp, .ylwDwn{
 background-color: #aaaa00 !important;
