--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@ body {
 	text-align: center;
 	background-color: #012169;
 	color: #fff;
-	margin: 0
+}
+html, body{
+    height:100%;
+    width:100%;
+    padding:0;
+    margin:0;
 }
 table {
 	margin: auto;
