--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body{
 table {
 	margin: auto;
 	table-layout: fixed;
-}	
+}		
 .grn {
 background-color: green !important;
 }
@@ -35,7 +35,7 @@ th, td {
   padding: 15px;
 }
 tr {
-	width: auto;
+	width: 100%;
 }
 td {
 	background-color: rgba(255,255,255,0.3);
