--- a/style.css
+++ b/style.css
@@ -68,3 +68,22 @@ td {
   font-size: 28px;
   font-weight: bold;
 }
+
+
+@media (prefers-color-scheme: light) {
+	body {
+		text-align: center;
+		background-color: #fff;
+		color: #012169;
+	}
+	td {
+		background-color: rgba(1,33,105,0.3);
+	}
+	.modal {
+		background-color: rgb(255,255,255); /* Fallback color */
+		background-color: rgba(255,255,255,0.4); /* Black w/ opacity */
+	}
+	#res {
+		background-color: #012169;
+	}
+}
